--- a/frontend/src/app/core/components/sidenav/sidenav-component.html
+++ b/frontend/src/app/core/components/sidenav/sidenav-component.html
@@ -20,19 +20,19 @@
 				<a mat-list-item routerLink="./planes" routerLinkActive="active">
 					<span class="entry">
 						<mat-icon>flight</mat-icon>
-						<span>Planes</span>
+						<span>Avions</span>
 					</span>
 				</a>
-				<a mat-list-item routerLink="./flights" routerLinkActive="active">
+				<a mat-list-item routerLink="./users" routerLinkActive="active">
 					<span class="entry">
-						<mat-icon>flight_takeoff</mat-icon>
-						<span>Flights</span>
+						<mat-icon>person</mat-icon>
+						<span>Utilisateurs</span>
 					</span>
 				</a>
 				<a mat-list-item routerLink="./bills" routerLinkActive="active">
 					<span class="entry">
 						<mat-icon>receipt</mat-icon>
-						<span>Billings</span>
+						<span>Facturations</span>
 					</span>
 				</a>
 			</mat-nav-list>
