--- a/frontend/src/app/courses/pages/course-list-page/course-list.page.html
+++ b/frontend/src/app/courses/pages/course-list-page/course-list.page.html
@@ -1,9 +1,17 @@
 <section>
-	<se-course-timeline></se-course-timeline>
-
+	@if (authentication.user && authentication.user.role >= UserRoles.Staff) {
+		@for (course of courses; track $index) {
+			<se-course [entity]="course"></se-course>
+		}
+	}
+	@else {
+		<se-course-timeline></se-course-timeline>
+	}
+</section>
+<section>
 	@if (authentication.user && authentication.user.role >= UserRoles.Collaborator) {
-		<button mat-raised-button color="primary" [routerLink]="['/courses/create']">
-			Ajouter
-		</button>
+	<button mat-raised-button color="primary" [routerLink]="['/courses/create']">
+		Ajouter
+	</button>
 	}
 </section>
