--- a/frontend/src/app/dashboard/pages/dashboard.page.scss
+++ b/frontend/src/app/dashboard/pages/dashboard.page.scss
@@ -16,7 +16,7 @@
 
 }
 
-.dashboard__content__body__calendar{
+.dashboard__content__body__calendar { // TODO: GUILLAUME
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 10px;
