--- a/frontend/src/app/authentication/pages/login-page/login-page.scss
+++ b/frontend/src/app/authentication/pages/login-page/login-page.scss
@@ -9,16 +9,20 @@
 // }
 
 
-// :host .card-content {
-// 	width: 400px;
-// }
+section.book-spread {
+	height: 100vh;
+}
+
+.background-picture{
+	background-image: url('../../../../assets/login-background.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 100%;
+	width: 100%;
+}
+
 
 .authentication-card {
-	position: absolute;
-	right: 15vw;
-	top: 0;
-	bottom: 0;
-
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -28,22 +32,39 @@
 
 
 #toggle-labels {
-	display: flex;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
 	gap: 4rem;
 	text-align: center;
 	margin: 0;
 	z-index: 10;
+	color: white;
+	font-size: 2rem;
+	font-family: "Russo One", sans-serif;
+	flex-grow: 0;
 
 	& ion-text {
 		padding: 0 20px;
 		font-weight: 700;
+	}
+
+	& > * {
+		min-width: fit-content;
+	}
+
+	&:nth-child(0) {
+		text-align: right;
+	}
+
+	&:nth-child(1) {
+		text-align: left;
 	}
 }
 
 #toggle-btn {
 	display: none;
 	z-index: 10;
+
 
 	& + label {
 		position: relative;
@@ -90,7 +111,6 @@
 }
 
 .card__container {
-	// position: absolute;
 	width: 30vw;
 	max-width: 100%;
 	height: 65vh;
@@ -102,7 +122,6 @@
 .card__wrapper {
 	width: 100%;
 	height: 100%;
-	// position: absolute;
 	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
 	transition: all 600ms ease-out;
@@ -116,7 +135,8 @@
 	border-radius: 6px;
 	transform-style: preserve-3d;
 	-webkit-transform-style: preserve-3d;
-	padding: 13px 11px;
+	padding: 1rem;
+	overflow: hidden;
 
 	& > form.grid {
 		transform: translate3d(0, 0, 65px) perspective(100px);
@@ -128,4 +148,13 @@
 }
 .card--back {
 	transform: rotateY(180deg);
+
+
+}
+
+
+mat-card-title.login-title{
+	color: #24265A;
+	font-size: 2.5rem;
+
 }
