--- a/frontend/src/app/courses/pages/create-course-page/create-course.page.html
+++ b/frontend/src/app/courses/pages/create-course-page/create-course.page.html
@@ -1,10 +1,10 @@
-<section>
+<section class="book-spread">
 	@if (authentication.user && authentication.user.role > UserRoles.User) {
 		<img src="../../../../assets/vue-avion.png" alt="image" class="course-picture">
 
-		<div>
-			<mat-card-title class="mat-card-title-create-form">Créer un Cours</mat-card-title>
-			<div class="subtitle"></div>
+		<div class="book-spread__page">
+			<mat-card-title class="mat-card-title-create-form"><h1>Créer un Cours</h1></mat-card-title>
+			<div class="line"></div>
 
 			<mat-card>
 				<form class="grid create-course" [formGroup]="publishForm" (ngSubmit)="publish()">
@@ -89,12 +89,12 @@
 						<mat-card-title class="mat-card-title-create-form-subtitle">Facturation</mat-card-title>
 						<mat-form-field class="grid__child--full-width">
 							<mat-label>Nom de la facture</mat-label>
-							<input type="text" matInput formControlName="name">
+							<input type="text" matInput formControlName="billName" required>
 						</mat-form-field>
 
 						<mat-form-field class="grid__child--full-width">
 							<mat-label>url</mat-label>
-							<input type="url" matInput formControlName="url">
+							<input type="url" matInput formControlName="billUrl" required>
 						</mat-form-field>
 					</mat-card-content>
 
