--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -71,6 +71,7 @@ form.grid {
 			display: flex;
 			justify-content: flex-start;
 			align-items: center;
+			text-align: start;
 		}
 
 		& .grid__child {
