--- a/frontend/src/app/courses/pages/course-page/course.page.html
+++ b/frontend/src/app/courses/pages/course-page/course.page.html
@@ -1,5 +1,5 @@
 <section>
-	@if (course) {
+	@if (entity) {
 		<mat-card-title><h1>le Cours</h1></mat-card-title>
 		<div class="line"></div>
 
@@ -7,7 +7,7 @@
 			<form class="grid " [formGroup]="editCourseForm" (ngSubmit)="onSubmit()">
 
 				<mat-card-content class="grid__container">
-					@if (authentication.user && (authentication.user.id === course.flight.overseer.id || authentication.user.role > UserRoles.Collaborator)) {
+					@if (authentication.user && (authentication.user.id === entity.flight.overseer.id || authentication.user.role > UserRoles.Collaborator)) {
 						<mat-form-field class="grid__child--full-width">
 							<mat-label>Intitulé du Cours</mat-label>
 							<input matInput formControlName="courseName" type="text">
@@ -18,7 +18,7 @@
 					}
 					@else {
 						<mat-label class="grid__child--label">Intitulé du Cours</mat-label>
-						<span class="grid__child--field">{{ course.name }}</span>
+						<span class="grid__child--field">{{ entity.name }}</span>
 					}
 
 
@@ -39,10 +39,10 @@
 					}
 					@else {
 						<mat-label class="grid__child--label">Professeur</mat-label>
-						<span class="grid__child--field">{{ course.flight.overseer.firstName }}  {{ course.flight.overseer.lastName }}</span>
+						<span class="grid__child--field">{{ entity.flight.overseer.firstName }}  {{ entity.flight.overseer.lastName }}</span>
 					}
 
-					@if (authentication.user && (authentication.user.id === course.flight.overseer.id || authentication.user.role > UserRoles.Collaborator)) {
+					@if (authentication.user && (authentication.user.id === entity.flight.overseer.id || authentication.user.role > UserRoles.Collaborator)) {
 						<mat-form-field class="grid__child--half">
 							<mat-label>Date</mat-label>
 
@@ -60,11 +60,11 @@
 					}
 					@else {
 						<mat-label class="grid__child--label">Date</mat-label>
-						<span class="grid__child--field">{{ moment(course.flight.dateTime).toDate().toLocaleDateString("fr-FR", { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' }) }}</span>
+						<span class="grid__child--field">{{ moment(entity.flight.dateTime).toDate().toLocaleDateString("fr-FR", { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric' }) }}</span>
 					}
 
 
-					@if (authentication.user && (authentication.user.id === course.flight.overseer.id || authentication.user.role > UserRoles.Collaborator)) {
+					@if (authentication.user && (authentication.user.id === entity.flight.overseer.id || authentication.user.role > UserRoles.Collaborator)) {
 						<mat-form-field class="grid__child--full-width">
 							<mat-label>Durée</mat-label>
 
@@ -73,7 +73,7 @@
 					}
 					@else {
 						<mat-label class="grid__child--label">Durée</mat-label>
-						<span class="grid__child--field">{{ course.flight.duration }}</span>
+						<span class="grid__child--field">{{ entity.flight.duration }}</span>
 					}
 
 
