--- a/frontend/src/app/planes/pages/plane-page/plane.page.html
+++ b/frontend/src/app/planes/pages/plane-page/plane.page.html
@@ -1,4 +1,4 @@
-@if (plane) {
+@if (entity) {
 <section>
 	<mat-card-title class="mat-card-title-create-form"><h1>Modifier l'Avion</h1></mat-card-title>
 	<div class="line"></div>
@@ -8,10 +8,10 @@
 
 			<mat-card-content class="grid__container">
 				<mat-label class="grid__child--label"><p>Nom de l'Avion</p></mat-label>
-				<span class="grid__child--field">{{ plane.name }}</span>
+				<span class="grid__child--field">{{ entity.name }}</span>
 
 				<mat-label class="grid__child--label">Type</mat-label>
-				<span class="grid__child--field">{{ plane.type}}</span>
+				<span class="grid__child--field">{{ entity.type}}</span>
 
 
 				@if (authentication.user && authentication.user.role >= UserRoles.Staff) {
@@ -26,7 +26,7 @@
 				}
 				@else {
 				<mat-label class="grid__child--label">Statut</mat-label>
-				<span class="grid__child--field">{{ plane.status }}</span>
+				<span class="grid__child--field">{{ entity.status }}</span>
 				}
 			</mat-card-content>
 
